[gd_scene load_steps=16 format=2]

[ext_resource path="res://Menus/Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/resources/bg.jpg" type="Texture" id=4]
[ext_resource path="res://font_s28.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sprites/UI/icons8-sort-right-100.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/next_white.png" type="Texture" id=8]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 40.0
content_margin_right = 40.0
content_margin_top = 15.0
content_margin_bottom = 15.0
border_width_left = 4
border_width_top = 4
border_width_right = 4

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 40.0
content_margin_right = 40.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4

[sub_resource type="StyleBoxFlat" id=4]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="DynamicFont" id=5]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Lobby" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -601.0
margin_top = -332.5
margin_right = 601.0
margin_bottom = 332.5
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Panel"]
anchor_left = 0.522
anchor_top = 0.5
anchor_right = 0.522
anchor_bottom = 0.5
margin_left = -459.057
margin_top = -27.85
margin_right = 459.943
margin_bottom = 283.15
custom_styles/tab_fg = SubResource( 2 )
custom_styles/tab_bg = SubResource( 3 )
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" type="Tabs" parent="Panel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 48.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ffire" type="Label" parent="Panel/TabContainer/Game"]
margin_left = 204.149
margin_top = 47.6108
margin_right = 383.149
margin_bottom = 84.6108
custom_fonts/font = ExtResource( 5 )
text = "Friendly Fire"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="Panel/TabContainer/Game/ffire"]
margin_left = 302.349
margin_top = -11.2253
margin_right = 378.349
margin_bottom = 28.7747
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mode" type="Label" parent="Panel/TabContainer/Game"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 204.149
margin_top = 147.857
margin_right = -539.851
margin_bottom = -74.1426
custom_fonts/font = ExtResource( 5 )
text = "Game Mode"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="mode" type="Button" parent="Panel/TabContainer/Game/mode"]
margin_left = 282.851
margin_top = -6.85742
margin_right = 463.851
margin_bottom = 47.1426
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
text = "FFA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bots" type="Tabs" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 48.0
margin_right = -4.0
margin_bottom = -4.0

[node name="bot_no" type="Label" parent="Panel/TabContainer/Bots"]
margin_left = 97.1293
margin_top = 165.208
margin_right = 267.129
margin_bottom = 208.209
custom_fonts/font = SubResource( 5 )
text = "Bot Count"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Panel/TabContainer/Bots/bot_no"]
margin_left = 309.0
margin_top = 10.0
margin_right = 427.0
margin_bottom = 26.0
rect_scale = Vector2( 2, 2 )
max_value = 24.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel/TabContainer/Bots/bot_no"]
margin_left = 581.446
margin_top = 10.0
margin_right = 631.446
margin_bottom = 37.0
__meta__ = {
"_edit_group_": true
}

[node name="count" type="Label" parent="Panel/TabContainer/Bots/bot_no/Panel"]
anchor_left = -0.63
anchor_top = -1.142
anchor_right = -0.63
anchor_bottom = -1.142
margin_left = 34.5
margin_top = 28.334
margin_right = 78.5
margin_bottom = 60.334
custom_fonts/font = SubResource( 6 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bot_difficulty" type="Label" parent="Panel/TabContainer/Bots"]
margin_left = 96.9681
margin_top = 65.4239
margin_right = 319.968
margin_bottom = 108.424
custom_fonts/font = SubResource( 5 )
text = "Bot Difficulty"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="bot_diff" type="HSlider" parent="Panel/TabContainer/Bots/bot_difficulty"]
margin_left = 310.0
margin_top = 12.0
margin_right = 427.0
margin_bottom = 28.0
rect_scale = Vector2( 2, 2 )
min_value = 1.0
max_value = 4.0
value = 1.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel/TabContainer/Bots/bot_difficulty"]
margin_left = 584.477
margin_top = 14.128
margin_right = 634.477
margin_bottom = 41.128
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="count" type="Label" parent="Panel/TabContainer/Bots/bot_difficulty/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -16.0
margin_right = 22.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 6 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portrait" type="Panel" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.195
anchor_right = 0.5
anchor_bottom = 0.195
margin_left = -180.0
margin_top = -122.675
margin_right = 181.0
margin_bottom = 122.325
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="level_name" type="Label" parent="Panel/portrait"]
anchor_left = 0.5
anchor_top = 0.429
anchor_right = 0.5
anchor_bottom = 0.429
margin_left = -94.2
margin_top = 153.545
margin_right = 103.8
margin_bottom = 192.545
custom_fonts/font = ExtResource( 5 )
text = "LEVEL NAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/portrait"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.5
margin_top = -119.5
margin_right = 175.5
margin_bottom = 119.5
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_map" type="TextureButton" parent="Panel/portrait"]
margin_left = 363.0
margin_top = 16.0
margin_right = 553.0
margin_bottom = 227.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prev_map" type="TextureButton" parent="Panel/portrait"]
margin_left = -3.31543
margin_top = 16.0
margin_right = 186.685
margin_bottom = 227.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 41.0
margin_top = 40.0
margin_right = 392.0
margin_bottom = 104.0
rect_scale = Vector2( 1.25, 1.25 )
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="."]
margin_left = 952.0
margin_top = 580.0
margin_right = 1108.0
margin_bottom = 634.0
custom_fonts/font = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="Panel/TabContainer/Game/ffire/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="Panel/TabContainer/Game/mode/mode" to="." method="_on_mode_pressed"]
[connection signal="value_changed" from="Panel/TabContainer/Bots/bot_no/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Bots/bot_difficulty/bot_diff" to="." method="_on_bot_diff_value_changed"]
[connection signal="pressed" from="Panel/portrait/next_map" to="." method="_on_next_map_pressed"]
[connection signal="pressed" from="Panel/portrait/prev_map" to="." method="_on_prev_map_pressed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
